# project-dirs-rs

./: .gitignore  .nvim.lua  Cargo.toml  Dockerfile  README.md  builder.schema.json  builder_result.schema.json  project-dirs-docker
project-dirs/: Cargo.toml
project-dirs-bin/: Cargo.toml
project-dirs-bin/src/: main.rs
project-dirs-builder/: Cargo.toml  example.json
project-dirs-builder/src/: lib.rs
project-dirs-c/: Cargo.toml  build.rs  project-dirs-c.h
project-dirs-c/examples/: Makefile  compile_flags.txt  main.c
project-dirs-c/src/: lib.rs
project-dirs-py/: Cargo.toml  pyproject.toml
project-dirs-py/examples/: basic.py
project-dirs-py/python/project_dirs_py/: __init__.py
project-dirs-py/src/: lib.rs
project-dirs/examples/: 00-minimal.rs  fhs-style.rs  unix-style.rs
project-dirs/src/: dir_utils.rs  lib.rs  proj_dirs.rs  project_triplet.rs
project-dirs/src/strategy/: fhs.rs  mod.rs  unix.rs  windows.rs  xdg.rs  zz-strategy.md
test_suite/: Cargo.toml
test_suite/json-builder/: README.md
test_suite/json-builder/0001-fhs/: input.json  output.default.json
test_suite/json-builder/0002-fhs/: input.json  output.default.json
test_suite/json-builder/0003-unix/: README.md  env.json  input.json  output.default.json  output.windows.json
test_suite/json-builder/0004-windows/: README.md  env.json  input.json  output.default.json
test_suite/json-builder/0005-windows-populated/: input.json  output.default.json  output.windows.json
test_suite/json-builder/0006-xdg-no-fallback/: input.json  output.default.json
test_suite/json-builder/0007-xdg-from-env/: input.json  output.default.json  output.windows.json
test_suite/json-builder/0008-xdg-from-env-with-overrides/: env.json  input.json  output.default.json  output.windows.json
test_suite/json-builder/0009-xdg-from-env-with-overrides/: input.json  output.default.json  output.windows.json
test_suite/json-builder/0010-xdg-from-env-with-overrides/: env.json  input.json  output.default.json  output.windows.json
test_suite/json-builder/0011-filters-basic/: env.json  input.json  output.default.json  output.windows.json
test_suite/json-builder/9999/: 9999.env.json  9999.input.json  9999.output.json
test_suite/src/: env_mock.rs  json_builder.rs  lib.rs  utils.rs
xtask/: Cargo.toml
xtask-json/: Cargo.toml
xtask-json/src/: main.rs
xtask/src/: builds.rs  main.rs  testing.rs  utils.rs
