[package]
name = "project-dirs-builder"
version = "0.1.0"
edition = "2024"
authors = ["tomekdur@wp.pl"]
description = "A library for building project-dirs"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
project-dirs = { path = "../project-dirs", features = ["serde"], version = "0.1.0" }
schemars = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
schemars = ["dep:schemars"]
