[package]
name = "project-dirs-c"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib", "staticlib"]

[dependencies]
project-dirs = { path = "../project-dirs" }
project-dirs-builder = { path = "../project-dirs-builder" }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = "0.29.0"
