[package]
name = "project-dirs-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "project_dirs_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
project-dirs = { path = "../project-dirs" }
project-dirs-builder = { path = "../project-dirs-builder" }
serde_json = { workspace = true }
