[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "project-dirs-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "project_dirs_py._project_dirs_rust"
python-source = "python"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.27.3",
    "neovim>=0.3.1",
]
