[package]
name = "project-dirs"
version = "0.1.0"
authors = ["tomekdur@wp.pl"]
description = "A library for finding project directories"
license = "MIT"
edition = "2024"

[features]
default = []
strum = ["dep:strum", "dep:strum_macros"]
pedantic = []
schemars = ["dep:schemars", "serde"]

# Until 1.85 home_dir was deprecated.
nonstd_home_dir = ["dep:home"]
serde = ["dep:serde"]

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1.0.140"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
strum = { version = "0.27.1", optional = true, features = ["derive"] }
strum_macros = { version = "0.27.1", optional = true }
thiserror = { version = "2.0.12", optional = true }
uzers = { version = "0.12.1", optional = true }
home = { version = "0.5.11", optional = true }
schemars = { workspace = true, optional = true }
sys-info = { version = "0.9.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = ">= 0.59.0", features = [
   "Win32_UI_Shell",
   "Win32_Foundation",
   "Win32_Globalization",
   "Win32_System_Com",
] }
