[package]
name = "test_suite"
version = "0.1.0"
edition = "2024"

[dependencies]
serde-json-assert = "0.2.1"
pretty_assertions = "1.4.1"
project-dirs = { path = "../project-dirs" }
project-dirs-builder = { path = "../project-dirs-builder" }
serde_json = { workspace = true, features = ["preserve_order"] }

[features]
sys-info = ["project-dirs/sys-info"]
